force-app/main/default/objects/Campaign_Upload__c/Campaign_Upload__c.object-meta.xml
<CustomObject>
    <label>Campaign Upload</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Campaign Upload Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Uploads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>