force-app/main/default/objects/Campaign_Upload__c/fields/Address_2__c.field-meta.xml
<CustomField>
    <fullName>Address_2__c</fullName>
    <label>Address 2</label>
    <type>TextArea</type>
</CustomField>