force-app/main/default/objects/Campaign_Upload__c/fields/Address_3__c.field-meta.xml
<CustomField>
    <fullName>Address_3__c</fullName>
    <label>Address 3</label>
    <type>TextArea</type>
</CustomField>