force-app/main/default/objects/Campaign_Upload__c/fields/Dim_X__c.field-meta.xml
<CustomField>
    <fullName>Dim_X__c</fullName>
    <label>Dim X</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>