force-app/main/default/objects/Campaign_Upload__c/fields/Duplicate_Member__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Member</label>
    <type>Checkbox</type>
</CustomField>