force-app/main/default/objects/Campaign_Upload__c/fields/Event_Product__c.field-meta.xml
<CustomField>
    <fullName>Event_Product__c</fullName>
    <label>Event Product</label>
    <length>60</length>
    <type>Text</type>
</CustomField>