force-app/main/default/objects/Campaign_Upload__c/fields/Member_Added__c.field-meta.xml
<CustomField>
    <fullName>Member_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Member Added</label>
    <type>Checkbox</type>
</CustomField>