force-app/main/default/objects/Campaign_Upload__c/fields/Member_Not_Found__c.field-meta.xml
<CustomField>
    <fullName>Member_Not_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Member Not Found</label>
    <type>Checkbox</type>
</CustomField>