force-app/main/default/objects/Campaign_Upload__c/fields/Net_Area__c.field-meta.xml
<CustomField>
    <fullName>Net_Area__c</fullName>
    <label>Net Area</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>