force-app/main/default/objects/Campaign_Upload__c/fields/Pillar_Area__c.field-meta.xml
<CustomField>
    <fullName>Pillar_Area__c</fullName>
    <label>Pillar Area</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>