force-app/main/default/objects/Campaign_Upload__c/fields/Town__c.field-meta.xml
<CustomField>
    <fullName>Town__c</fullName>
    <label>Town</label>
    <length>30</length>
    <type>Text</type>
</CustomField>