force-app/main/default/objects/Campaign_Upload__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Unique Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>