force-app/main/default/objects/Campaign_Upload__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <label>Website</label>
    <length>30</length>
    <type>Text</type>
</CustomField>