force-app/main/default/objects/Campaign_Upload__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Address_1__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Contact_Email__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Member_Added__c</columns>
    <columns>Member_Not_Found__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>